[package]
name = "MiniQuestEngine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.34.0"
winit = "0.29.14"
image = "0.25.0-preview.0"
lazy_static = "1.4.0"
chrono = "0.4.35"
downcast-rs = "1.2.0"
rodio = "0.17.3"
cgmath = "0.18.0"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
